Add the parsing of a website to retrieve WCAG values
