# src/models/wcag/contrast_input.ts
@@ -1,0 +1,6 @@
+export interface WCAGContrastInput {
+    textBackgroundColor: string,
+    textColor: string,
+    textSize: number,
+    textBold: boolean
+}
